--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <img src="abuelo.sama.png" class="arbol-chan-img" id="arbol-chan-img" alt="Tree-chan" />
             <div class="arbol-chan-titulo" id="arbol-chan-titulo">Kucho</div>
             <div class="arbol-chan-texto" id="arbol-chan-texto">
-                ¿Buscando la pista? En mis tiempos, los jóvenes se quedaban en casa jugando Fortnite, no creyéndose exploradores.
+                "Bro"..."Bro"...De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no saben lo que es correr.
             </div>
             <button class="btn-continuar" id="btn-continuar">Continuar</button>
         </div>
