--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
             <img src="abuelo.sama.png" class="arbol-chan-img" id="arbol-chan-img" alt="Tree-chan" />
             <div class="arbol-chan-titulo" id="arbol-chan-titulo">Kucho</div>
             <div class="arbol-chan-texto" id="arbol-chan-texto">
-                "Bro"..."Bro"...De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no saben lo que es correr.
-            </div>
+                ‘Bro’ por aquí, ‘Bro’ por allá… Qué ridículo suena.  De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no saben qué es correr.
             <button class="btn-continuar" id="btn-continuar">Continuar</button>
         </div>
     </div>
