--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
             <img src="abuelo.sama.png" class="arbol-chan-img" id="arbol-chan-img" alt="Tree-chan" />
             <div class="arbol-chan-titulo" id="arbol-chan-titulo">Kucho</div>
             <div class="arbol-chan-texto" id="arbol-chan-texto">
-                ‘Bro’ por aquí, ‘Bro’ por allá… Qué ridículo suena.  De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no saben qué es correr.
+                JA JA JA JA JA JA JA JA JA COF COF
+            </div>
             <button class="btn-continuar" id="btn-continuar">Continuar</button>
         </div>
     </div>
@@ -304,7 +305,7 @@
         const btnContinuar = document.getElementById('btn-continuar');
         btnContinuar.addEventListener('click', function() {
             if (arbolChanDialogStep === 0) {
-                arbolChanTexto.innerHTML = `...;
+                arbolChanTexto.innerHTML = `Si quieres la siguiente pista tendrás que demostrar que eres más rápido que yo...<br>pero cuidado, una chica me regalo una monster, olvidé dónde vivo...<br>y no me interesa regresar.`;
                 arbolChanDialogStep = 1;
             } else {
                 // Reemplaza el juego de pingpong por el laberinto, pero mantén las pantallas de ganar/perder
