--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         const btnContinuar = document.getElementById('btn-continuar');
         btnContinuar.addEventListener('click', function() {
             if (arbolChanDialogStep === 0) {
-                arbolChanTexto.innerHTML = `Si quieres la siguiente pista tendrás que demostrar que eres más rápido que yo...<br>pero cuidado, una chica me regalo una monster, olvidé dónde vivo...<br>y no me interesa regresar.`;
+                arbolChanTexto.innerHTML = `Hijo, te lo diré rápido. Si quieres la siguiente pista, tendrás que ser más rápido que yo.`;
                 arbolChanDialogStep = 1;
             } else {
                 // Reemplaza el juego de pingpong por el laberinto, pero mantén las pantallas de ganar/perder
