--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
             <img src="abuelo.sama.png" class="arbol-chan-img" id="arbol-chan-img" alt="Tree-chan" />
             <div class="arbol-chan-titulo" id="arbol-chan-titulo">Kucho</div>
             <div class="arbol-chan-texto" id="arbol-chan-texto">
-                "Bro" por aquí, "Bro" por allá… Qué ridículo suena. De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no sabe lo que es correr.
+                "Bro" por aquí, "Bro" por allá… Qué ridículo suena. 
+                De nada sirve levantar grandes pesas ni tener brazos enormes si tus piernas no sabe lo que es correr.
             </div>
             <button class="btn-continuar" id="btn-continuar">Continuar</button>
         </div>
