--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <img src="abuelo.sama.png" class="arbol-chan-img" alt="Don Árbol" style="opacity:1;transform:none;margin-bottom:0.7rem;" />
                 <div class="arbol-chan-titulo" style="color:#178a2c;margin-bottom:0.7rem;">Kucho</div>
                 <div class="arbol-chan-texto" style="color:#fff;">
-                    ¿Quién eres? ¿Dónde estoy?
+                    Nada mal, hijo.
                 </div>
                 <button id="maze-show-clue" class="btn-continuar" style="margin-top:1.2rem;">Ver pista</button>
             </div>
