--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                             aiAdvance();
                             checkWin();
                         }
-                    }, 190); // antes 115, ahora 90ms para más velocidad
+                    }, 212.5); // antes 115, luego 190ms, ahora 209ms para más lentitud
 
                     requestAnimationFrame(function loop() {
                         if (!finished) draw();
